@@ -105,6 +105,10 @@ MODULE temperature
                                         ! generated by tmin and tmax
   INTEGER :: itemp300                   ! the index of the temperature closest
                                         ! to 300 K.
+  REAL(DP), ALLOCATABLE :: temp_sigma(:), & ! Used when the total energy is
+                           sigma_ry(:)      ! computed for serveral sigma 
+                                            ! values
+ 
 END MODULE temperature
 
 !----------------------------------------------------------------------------
@@ -1157,7 +1161,11 @@ MODULE control_eldos
 
   LOGICAL :: lel_free_energy ! if .TRUE. add the electron free energy to
                             ! the total energy
-  
+  LOGICAL :: hot_electrons   ! if .TRUE. the code expects to find the 
+                             ! energy for several values of sigma in 
+                             ! directories called restart2, restart3 ...
+                             ! and the electronic contribution is not
+                             ! evaluated from eldos.
 END MODULE control_eldos
 
 !----------------------------------------------------------------------------
